deployments/example-go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: example-go
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
