deployments/example-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: example-node
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 4000
