deployments/example-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: node-service
              servicePort: 8000
