deployments/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  routes:
    - match: Path(`/api/graphql`)
      kind: Rule
      services:
        - name: hades
          port: 8000
      middlewares:
        - name: stripprefix
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: medusa
          port: 8000
